tests/broken/add-bools.stderr
error[E0369]: cannot add `bool` to `bool`
 --> tests/broken/add-bools.rs:3:10
  |
3 | #[derive(Oxiplate)]
  |          ^^^^^^^^
4 | #[oxiplate_inline = "{{ a + b }}"]
  |                         -   - bool
  |                         |
  |                         bool
  |
  = note: this error originates in the derive macro `Oxiplate` (in Nightly builds, run with -Z macro-backtrace for more info)
